# webassembly-granulizer

./: .babelrc  .gitignore  Cargo.toml  README.md  build.sh  bundle.sh  clean.sh  index.html  main.tsx  package.json  server.js  tsconfig.json  webpack.config.js
js/: app.tsx  gui.tsx
js/components/: oscilloscope.tsx  slider.tsx  waveform.tsx
oscilloscope/: Cargo.toml  index.ts  wasm.js  worklet.js
oscilloscope/src/: lib.rs
rs/: anim.rs  lib.rs  oscilloscope.rs  utils.rs
rs/shaders/: shader.frag  shader.vert
sampler/: Cargo.toml  index.ts  wasm.js  worklet.js
sampler/src/: lib.rs
