[package]
name = "oscilloscope"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.63"
wasm-bindgen = "0.2.86"

[dependencies.web-sys]
version = "0.3.63"
features = [
  'AudioBuffer',
  'AudioContext',
  'AudioParam',
  'AudioParamMap',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
